--- a/log.css
+++ b/log.css
@@ -3,8 +3,8 @@
     padding: 0;
 }
 .container{
-    width: 100%;
-    height: 100vh;
+    width: 200%;
+    height: 150vh;
     font-family: sans-serif;
     background: rgb(187,187,245);
     color: #fff;
@@ -13,7 +13,7 @@
     justify-content: center;
 }
 .card{
-    width: 350px;
+    width:350px;
     height: 500px;
     box-shadow: 0px 0px 40px 20px rgba(0,0,0,0.26);
     perspective: 1000px;
@@ -22,7 +22,7 @@
 .inner-box{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 120vh;
     transform-style: preserve-3d; 
    transition: transform 1s;
 }
@@ -65,11 +65,11 @@
     font-size: 12px;
 }
 button{
-    width: 100px;
+    width: 100%;
     background: transparent;
     border: 1px solid #fff;
-    margin: 35px 0 10px;
-    height: 32px;
+    margin: 5px 5px;
+    height: 30px;
     font-size: 12px;
     border-radius: 20px;
     padding: 0 10px;
@@ -88,7 +88,7 @@ line-height: 32px;
 font-size: 17px;
 height: 32px;
 width: 32px;
-border-radius: 50%;
+border-radius:20%;
 background: #fff;
 position: absolute;
 right:-1px;
